re PR objc++/48479 (Many ICEs in the obj-c++.dg test suite on *-apple-darwin*)

PR objc++/48479
	* typeck.c (cxx_mark_addressable) [CONST_DECL]: Mark addressable
	and return immediately.

From-SVN: r172441